# icrc7

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  canister_ids.json  deploy.txt  dfx.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
src/icrc7/: Cargo.toml  deploy.txt  icrc7.did
src/icrc7/src/: lib.rs  state.rs  update.rs
src/icrc7/tests/: integration.rs
